<resources>
    <string name="app_name">StoryOneApp</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Ayo Buat Cerita Terbaikmu di StoryOneAPP</string>
    <string name="title_welcome_page">Welcome to StoryOneAPP!</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Bersiaplah Untuk membuat Story Terbaikmu</string>
    <string name="name">Nama</string>
    <string name="message_main_page">Mari Bercerita!</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>
    <string name="welcome_image">Story Image Welcome</string>
    <string name="hint_email">abc@gmail.com</string>
    <string name="hint_password">Password</string>
    <string name="email_empty">Email cannot be empty</string>
    <string name="password_empty">Password cannot be empty</string>
    <string name="ok">OK</string>
    <string name="login_success">Login successful</string>
    <string name="login_failed">Login failed</string>
    <string name="name_empty">Name cannot be empty</string>
    <string name="signup_success">Signup successful!</string>
    <string name="signup_failed">Signup failed</string>
    <string name="password_minimum_length">Password must be at least 8 characters</string>
    <string name="invalid_email">Please enter a valid email address</string>
    <string name="name_input">Name input field</string>
    <string name="email_input">Email input field</string>
    <string name="password_input">Password input field</string>
    <string name="add_story">Add Story</string>
    <string name="story_image">Image Story</string>
    <string name="welcome_user">Welcome, %1$s!</string>
    <string name="no_internet_connection">No Internet Connection!</string>
    <string name="file_empty">no file detected</string>
    <string name="details_icon">Details Icon</string>
    <string name="write_desc">Write a description</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="upload">Upload</string>
    <string name="password_too_short">Password must be at least 8 characters</string>
    <string name="submit_button">Login</string>
    <string name="password_hint">Password</string>
    <string name="password_error">Password must be at least 8 characters</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="open_map">Maps</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="retry">Coba lagi</string>
    <string name="no_data">Tidak ada cerita untuk ditampilkan.</string>
</resources>